# MetricTide

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: .env.example  README.md  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/config/: env.ts
apps/web/src/lib/: api-client.ts  utils.ts
docs/adr/: 0001-defer-kafka.md
docs/superpowers/specs/: 2026-06-19-metrictide-architecture-design.md
infra/: README.md
infra/docker/: api.Dockerfile  web.Dockerfile
infra/postgres/init/: 01-extensions.sql
services/api/: .env.example  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api/: __init__.py  dependencies.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/routes/: health.py  ingestion.py  topics.py  trends.py
services/api/app/api/v1/schemas/: health.py  ingestion.py  source.py  topic.py  topic_mention.py  topics.py  trend_snapshot.py  trends.py
services/api/app/application/: __init__.py
services/api/app/application/ports/: __init__.py  embedding.py  hackernews_client.py  reddit_client.py  topic_extraction.py
services/api/app/application/use_cases/: __init__.py
services/api/app/application/use_cases/clustering/: __init__.py
services/api/app/application/use_cases/ingestion/: __init__.py  hackernews.py  reddit.py  source_ingestion_service.py
services/api/app/application/use_cases/reporting/: __init__.py
services/api/app/application/use_cases/topics/: __init__.py  canonical_topic_service.py  normalizer.py  topic_cluster_service.py  topic_extraction_service.py
services/api/app/application/use_cases/trend_detection/: __init__.py
services/api/app/application/use_cases/trends/: __init__.py  trend_score_calculator.py  trend_scoring_service.py
services/api/app/core/: __init__.py  config.py  lifespan.py  logging.py  middleware.py  timeutils.py
services/api/app/domain/: __init__.py  exceptions.py
services/api/app/domain/entities/: __init__.py  platform.py  source.py  topic.py  topic_alias.py  topic_mention.py  trend_snapshot.py
services/api/app/domain/repositories/: __init__.py  source_repository.py  topic_mention_repository.py  topic_merge_repository.py  topic_repository.py  trend_metrics_repository.py  trend_snapshot_repository.py
services/api/app/infrastructure/: __init__.py
services/api/app/infrastructure/cache/: redis.py
services/api/app/infrastructure/db/: __init__.py  base.py  session.py
services/api/app/infrastructure/db/models/: __init__.py  source.py  topic.py  topic_alias.py  topic_mention.py  trend_snapshot.py
services/api/app/infrastructure/hackernews/: __init__.py  http_client.py
services/api/app/infrastructure/messaging/: __init__.py
services/api/app/infrastructure/nlp/: __init__.py  sentence_transformer_embedder.py  spacy_keybert_extractor.py
services/api/app/infrastructure/reddit/: __init__.py  http_client.py
services/api/app/infrastructure/repositories/: __init__.py  mappers.py  source_repository.py  topic_mention_repository.py  topic_merge_repository.py  topic_repository.py  trend_metrics_repository.py  trend_snapshot_repository.py
services/api/app/infrastructure/vector/: __init__.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial_schema.py  0002_add_source_created_at.py  0003_topic_embedding_384.py  0004_topic_consolidation.py
services/api/tests/: conftest.py
services/api/tests/unit/: test_canonical_topic.py  test_health.py  test_mappers.py  test_schemas.py  test_source_ingestion_service.py  test_topic_cluster.py  test_topic_extraction.py  test_trend_scoring.py
(+2 files in other folders)
